introduce common parent pom for all 'opennlp-sandbox' components
- adds in most sandbox components
- fixes some forbiddenapis plugin warnings in `opennlp-similarity` classes
- adds GH actions
- adds `.gitattributes`
- addresses PR reviewers' comments